--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,30 @@
-.navBar {
-  margin-top: 20px;
+.cartContainer {
+  padding: 10px;
+  color: black;
 }
-
-.ulNav {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
+.cartWidget {
+  float: right;
+  
 }
 
 .liNav {
   width: 100px;
+  font-size: 1rem;
+  text-align: center;
+  list-style: none;
+  margin: 5px;
+  padding: 10px;
+  background-color: black;
+  border-radius: 10px;
+
 }
 
 .cartWidget {
-  float: right;
+  padding: 10px;
 }
 
-.cartWidget {
-  width: 30px;
+.h1 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 10px;
 }
